@@ -3,9 +3,11 @@ package org.wordpress.mobile.ReactNativeAztec;
 import android.content.ClipData;
 import android.content.ClipboardManager;
 import android.content.Context;
+import android.content.res.TypedArray;
 import android.graphics.Rect;
 import android.os.Handler;
 import android.os.Looper;
+import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import android.text.Editable;
 import android.text.InputType;
@@ -38,6 +40,8 @@ import java.util.HashMap;
 import static android.content.ClipData.*;
 
 public class ReactAztecText extends AztecText {
+
+    private static final String PRE_TAG = "pre";
 
     private final InputMethodManager mInputMethodManager;
     // This flag is set to true when we set the text of the EditText explicitly. In that case, no
@@ -164,6 +168,16 @@ public class ReactAztecText extends AztecText {
         }
 
         return super.onTextContextMenuItem(id);
+    }
+
+    @Override
+    public float getPreformatBackgroundAlpha(@NonNull TypedArray styles) {
+        return 0;
+    }
+
+    @Override
+    public boolean shouldSkipTidying() {
+        return isPreTag();
     }
 
     // VisibleForTesting from {@link TextInputEventsTestCase}.
@@ -501,11 +515,18 @@ public class ReactAztecText extends AztecText {
     /**
      * This class will redirect *TextChanged calls to the listeners only in the case where the text
      * is changed by the user, and not explicitly set by JS.
+     *
+     * Update:
+     * There is a special case when block is preformatted.
+     * In that case we want to propagate TextWatcher method calls even if text is set from JS.
+     * Otherwise, couple of bugs will be introduced
+     * bug 1# https://github.com/wordpress-mobile/AztecEditor-Android/pull/869#issuecomment-552864686
+     * bug 2# https://github.com/wordpress-mobile/gutenberg-mobile/pull/1615#pullrequestreview-323274540
      */
     private class TextWatcherDelegator implements TextWatcher {
         @Override
         public void beforeTextChanged(CharSequence s, int start, int count, int after) {
-            if (!mIsSettingTextFromJS && mListeners != null) {
+            if (shouldDelegateTextChangeCalls()) {
                 for (TextWatcher listener : mListeners) {
                     listener.beforeTextChanged(s, start, count, after);
                 }
@@ -514,7 +535,7 @@ public class ReactAztecText extends AztecText {
 
         @Override
         public void onTextChanged(CharSequence s, int start, int before, int count) {
-            if (!mIsSettingTextFromJS && mListeners != null) {
+            if (shouldDelegateTextChangeCalls()) {
                 for (TextWatcher listener : mListeners) {
                     listener.onTextChanged(s, start, before, count);
                 }
@@ -525,11 +546,29 @@ public class ReactAztecText extends AztecText {
 
         @Override
         public void afterTextChanged(Editable s) {
-            if (!mIsSettingTextFromJS && mListeners != null) {
+            if (shouldDelegateTextChangeCalls()) {
                 for (TextWatcher listener : mListeners) {
                     listener.afterTextChanged(s);
                 }
             }
         }
+    }
+
+    private boolean shouldDelegateTextChangeCalls() {
+        if (mListeners == null) {
+            // No listeners so, no one to delegate the calls to
+            return false;
+        }
+
+        if (isPreTag()) {
+            // If tag is pre tag we want to delegate calls in every case
+            return true;
+        }
+
+        return !mIsSettingTextFromJS;
+    }
+
+    private boolean isPreTag() {
+        return PRE_TAG.equals(mTagName);
     }
 }
